<resources>
    <string name="app_name">Motoclima</string>
    <string name="str_tie_email1">Correo</string>
    <string name="str_tie_password">Contraseña</string>
    <string name="str_btn_login">INICIAR SECCIÒN</string>
    <string name="str_txv_dontHaveAccount">¿ Has olvidado tu contraseña ?</string>
    <string name="str_txv_createHere">CREAR CUENTA</string>
    <string name="str_tie_email">Correo electronico</string>
    <string name="str_tie_name">Nombre</string>
    <string name="str_tie_user">Usuario</string>
    <string name="str_tier_password">Contraseña</string>
    <string name="str_tie_confirm_password">Confirmar Contraseña</string>
    <string name="str_btn_createaccount">CREA CUENTA</string>
    <string name="str_tb_tittle">Crear cuenta</string>
    <string name="str_tab_search">Buscar</string>
    <string name="str_tab_home">Inicio</string>
    <string name="str_tab_profile">Perfil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title_toolbar">Crear Cuenta</string>
    <string name="id_btn_map_dublin">Dublin</string>
    <string name="id_btn_map_tokyo">Tokyo</string>
    <string name="id_btn_map_seattle">Seattle</string>
    <string name="error_password">Contraseña Incorrecta</string>


</resources>
